<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="36dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/job"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/education"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hobby"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/social"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:textColor="#FFFFFF"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/custom_button_background"
                android:text="@string/edit_profile"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/custom_button_background"
                android:text="@string/logout"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/custom_button_background"
                android:text="@string/delete_account"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemIconTint="#FF4081"
        app:itemTextColor="#FF4081"
        android:background="@color/black"
        app:menu="@menu/bottom_menu"
        app:itemActiveIndicatorStyle="@color/black"/>

</RelativeLayout>
